--- a/iteration3_i_pyspark.ipynb
+++ b/iteration3_i_pyspark.ipynb
@@ -1130,6 +1130,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "7eccb105-cd09-4af2-b4ee-8e87012f7c5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import col\n",
+    "\n",
+    "# 打印数据框的模式\n",
+    "data_attribute.printSchema()\n",
+    "\n",
+    "# 获取行数和列数\n",
+    "num_rows = data_attribute.count()\n",
+    "num_columns = len(data_attribute.columns)\n",
+    "\n",
+    "# 打印行数和列数\n",
+    "print(f\"Number of rows: {num_rows}\")\n",
+    "print(f\"Number of columns: {num_columns}\")\n",
+    "\n",
+    "# 统计每一列的非空值数量\n",
+    "for column in data_attribute.columns:\n",
+    "    non_null_count = data_attribute.filter(col(f\"`{column}`\").isNotNull()).count()\n",
+    "    print(f\"Column '{column}': non-null values = {non_null_count}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 31,
    "id": "6983bb47",
    "metadata": {},
@@ -1148,9 +1174,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "columns_to_convert = data_attribute.columns[4:]\n",
+    "from pyspark.sql.types import DoubleType\n",
     "\n",
     "# 将指定的列转换为数值类型\n",
+    "columns_to_convert = data_attribute.columns[4:]\n",
     "for col_name in columns_to_convert:\n",
     "    data_attribute = data_attribute.withColumn(col_name, col(f\"`{col_name}`\").cast(DoubleType()))\n",
     "\n",
@@ -1170,8 +1197,8 @@
     "\n",
     "# 统计每一列的非空值数量\n",
     "for column in data_attribute.columns:\n",
-    "    non_null_count = data_attribute.filter(data_attribute[column].isNotNull()).count()\n",
-    "    print(f\"Column '{column}': non-null values = {non_null_count}\")\n"
+    "    non_null_count = data_attribute.filter(col(f\"`{column}`\").isNotNull()).count()\n",
+    "    print(f\"Column '{column}': non-null values = {non_null_count}\")"
    ]
   },
   {
@@ -3880,7 +3907,7 @@
     "\n",
     "# 假设 data5 是另一个 PySpark DataFrame\n",
     "# 更新数据\n",
-    "data5 = data5.join(data_attribute, on='id', how='left')  # 假设存在共同列 'id'\n"
+    "#data5 = data5.join(data_attribute, on='id', how='left')  # 假设存在共同列 'id'\n"
    ]
   },
   {
@@ -4825,20 +4852,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import Lasso\n",
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.exceptions import ConvergenceWarning\n",
-    "warnings.filterwarnings(\"ignore\", category=ConvergenceWarning)\n",
+    "from pyspark.ml.regression import LinearRegression\n",
+    "from pyspark.ml.tuning import ParamGridBuilder, CrossValidator\n",
+    "from pyspark.ml.evaluation import RegressionEvaluator\n",
+    "from pyspark.sql import SparkSession\n",
+    "import warnings\n",
     "\n",
-    "alpha_range = [1e-4, 1e-3, 1e-2, 1e-1, 1, 10, 100, 1000]\n",
+    "# 创建SparkSession\n",
+    "spark = SparkSession.builder.appName(\"LassoRegression\").getOrCreate()\n",
     "\n",
-    "lasso = Lasso()\n",
-    "lasso_cv = GridSearchCV(estimator=lasso, param_grid={'alpha': alpha_range}, scoring='neg_mean_squared_error', cv=5)\n",
-    "lasso_cv.fit(X, y)\n",
-    "print(f\"Best alpha: {lasso_cv.best_params_['alpha']}\")\n",
-    "print(f\"MSE: {lasso_cv.best_score_}\")\n",
-    "model = lasso_cv.best_estimator_\n",
-    "\n"
+    "# 打印数据模式\n",
+    "#data_final.printSchema()\n",
+    "\n",
+    "# 查看数据内容\n",
+    "#data_final.show(truncate=False)\n",
+    "\n",
+    "# 定义Lasso回归模型\n",
+    "lr = LinearRegression(featuresCol='scaled_features', labelCol='Happiness Score', elasticNetParam=1.0)\n",
+    "\n",
+    "# 构建参数网格\n",
+    "paramGrid = ParamGridBuilder() \\\n",
+    "    .addGrid(lr.regParam, [1e-4, 1e-3, 1e-2, 1e-1, 1, 10, 100, 1000]) \\\n",
+    "    .build()\n",
+    "\n",
+    "# 定义评估器\n",
+    "evaluator = RegressionEvaluator(predictionCol=\"prediction\", labelCol=\"Happiness Score\", metricName=\"rmse\")\n",
+    "\n",
+    "# 构建交叉验证器\n",
+    "cv = CrossValidator(estimator=lr, estimatorParamMaps=paramGrid, evaluator=evaluator, numFolds=5)\n",
+    "\n",
+    "# 训练模型\n",
+    "cvModel = cv.fit(data_final)\n",
+    "\n",
+    "# 获取最佳模型和参数\n",
+    "bestModel = cvModel.bestModel\n",
+    "bestRegParam = bestModel._java_obj.getRegParam()\n",
+    "bestRmse = evaluator.evaluate(bestModel.transform(data_final))\n",
+    "\n",
+    "print(f\"Best alpha (regParam): {bestRegParam}\")\n",
+    "print(f\"Best RMSE: {bestRmse}\")\n"
    ]
   },
   {
@@ -4848,22 +4900,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.cluster import KMeans\n",
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.ml.clustering import KMeans\n",
+    "from pyspark.ml.feature import VectorAssembler\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "# 创建 SparkSession\n",
+    "spark = SparkSession.builder \\\n",
+    "    .appName(\"KMeansClustering\") \\\n",
+    "    .getOrCreate()\n",
     "\n",
+    "\n",
+    "# 切分数据集为特征矩阵和目标变量\n",
+    "X = data_final.select(\"scaled_features\")\n",
+    "\n",
+    "# 计算 WCSS\n",
     "wcss = []\n",
-    "for i in range(1, 11):  # try1 to10 cluster\n",
-    "    kmeans = KMeans(n_clusters=i, init='k-means++', max_iter=300, n_init=10, random_state=0)\n",
-    "    kmeans.fit(X)\n",
-    "    wcss.append(kmeans.inertia_)\n",
+    "for i in range(1, 11):\n",
+    "    kmeans = KMeans(k=i, initSteps=2, maxIter=300, seed=0)\n",
+    "    model = kmeans.fit(X)\n",
+    "    wcss.append(model.summary.trainingCost)\n",
     "\n",
+    "# 绘制肘部法图表\n",
     "plt.figure(figsize=(10, 8))\n",
-    "plt.plot(range(1, 11), wcss)\n",
+    "plt.plot(range(2, 11), wcss, marker='o')\n",
     "plt.title('The Elbow Method')\n",
     "plt.xlabel('Number of clusters')\n",
     "plt.ylabel('WCSS')\n",
-    "plt.savefig(\"/Users/zhoudaozhen/Desktop/722/iteration3/Figures/46.png\", format='png')\n",
+    "#plt.savefig(\"/Users/zhoudaozhen/Desktop/722/iteration3/Figures/46.png\", format='png')\n",
     "plt.show()\n"
    ]
   },
@@ -5449,7 +5513,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
